unpackaged/main/default/objects/Cal__Astrea_Task_Reminder__c/Cal__Astrea_Task_Reminder__c.object-meta.xml
<CustomObject>
    <label>Astrea Task &amp; Event Reminder</label>
    <nameField>
        <label>Astrea Task &amp; Event Reminder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Astrea Task &amp; Event Reminder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>