unpackaged/main/default/objects/Cal__Astrea_Task_Reminder__c/fields/Cal__Send_Reminder_for_Today_or_Tomorrow__c.field-meta.xml
<CustomField>
    <fullName>Cal__Send_Reminder_for_Today_or_Tomorrow__c</fullName>
    <label>Send Reminder On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day Of Meeting</fullName>
            </value>
            <value>
                <fullName>Day Before Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>