unpackaged/main/default/objects/Cal__Astrea_Task_Reminder__c/fields/Cal__Send_Reminder_to_Related_ContactEvent__c.field-meta.xml
<CustomField>
    <fullName>Cal__Send_Reminder_to_Related_ContactEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Reminder to &#39;Related Contact&#39;</label>
    <type>Checkbox</type>
</CustomField>