unpackaged/main/default/objects/Cal__Astrea_Task_Reminder__c/fields/Cal__Task_or_Event_Remainder__c.field-meta.xml
<CustomField>
    <fullName>Cal__Task_or_Event_Remainder__c</fullName>
    <label>Task or Event Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Task Reminder</fullName>
            </value>
            <value>
                <fullName>Event Reminder</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>