unpackaged/main/default/objects/Cal__Astrea_Task_Reminder__c/fields/Cal__Task_Scheduled_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Cal__Task_Scheduled_Job_Id__c</fullName>
    <label>Task Scheduled Job Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>