unpackaged/main/default/objects/Cal__Astrea_Task_Reminder__c/fields/Cal__Time_for_Event_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Cal__Time_for_Event_Scheduling__c</fullName>
    <label>Time for Event Scheduling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
            <value>
                <fullName>1:00 AM</fullName>
            </value>
            <value>
                <fullName>2:00 AM</fullName>
            </value>
            <value>
                <fullName>3:00 AM</fullName>
            </value>
            <value>
                <fullName>4:00 AM</fullName>
            </value>
            <value>
                <fullName>5:00 AM</fullName>
            </value>
            <value>
                <fullName>6:00 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM</fullName>
            </value>
            <value>
                <fullName>4:00 PM</fullName>
            </value>
            <value>
                <fullName>5:00 PM</fullName>
            </value>
            <value>
                <fullName>6:00 PM</fullName>
            </value>
            <value>
                <fullName>7:00 PM</fullName>
            </value>
            <value>
                <fullName>8:00 PM</fullName>
            </value>
            <value>
                <fullName>9:00 PM</fullName>
            </value>
            <value>
                <fullName>10:00 PM</fullName>
            </value>
            <value>
                <fullName>11:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>