unpackaged/main/default/objects/Cal__Astrea_Task_Reminder__c/fields/Cal__Type_of_Task__c.field-meta.xml
<CustomField>
    <fullName>Cal__Type_of_Task__c</fullName>
    <label>Type of Task</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>